--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.4.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-firebase/app": "^21.11.0",
-    "@react-native-firebase/auth": "^21.12.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/drawer": "^7.3.12",
+    "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.2.1",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
-    "expo-image-picker": "^16.0.6",
-    "react": "^19.0.0",
-    "react-native": "^0.78.0",
+    "formik": "^2.4.6",
+    "react": "19.0.0",
+    "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
-    "react-native-flipper": "^0.273.0",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.0",
+    "react-native-reanimated": "^3.18.0",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -45,6 +46,7 @@
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.78.0",
     "@react-native/eslint-config": "0.78.0",
+    "@react-native/gradle-plugin": "^0.79.2",
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
@@ -59,5 +61,9 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "overrides": {
+    "react": "19.0.0",
+    "react-test-renderer": "19.0.0"
   }
 }
