--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/react-native": "^5.4.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/drawer": "^7.3.12",
@@ -24,10 +25,13 @@
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-config": "^1.5.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.13.1",
+    "react-native-razorpay": "github:razorpay/react-native-razorpay",
     "react-native-reanimated": "^3.18.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.4.1",
@@ -35,7 +39,8 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,6 +57,8 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-native-razorpay": "^2.2.6",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
